# Applio-App

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/desktop/: .gitignore  index.html  package.json
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/svg/: background0.tsx  background1.tsx
apps/desktop/src/scripts/: isFirstTime.ts
apps/desktop/src/utils/: database.ts
apps/server/: .gitignore  README.md  install.bat  requirements.txt  server.py  server.spec
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/first-time/: pre-install.tsx  welcome.tsx
src/components/layout/: header.tsx  titlebar.tsx
src/components/svg/: background.tsx
src/components/updates/: backendUpdate.tsx
src/scripts/: isFirstTime.ts
src/utils/: database.ts
